apps/network/adguard/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: adguardproxy
  namespace: adguard
spec:
  virtualhost:
    fqdn: adguard.cornerstones.home
    tls:
      secretName: adguardproxy
  routes:
  - services:
    - name: adguard-adguard-home
      port: 3000
